<resources>
    <string name="app_name">Epoch Architect</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tlogin">Login</string>
    <string name="Rregister">Register</string>
    <string name="Rusername">Username</string>
    <string name="email">Email</string>
    <string name="rpassword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Rrregister">Register</string>
    <string name="Rlogin">Login</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome to Epoch Architect</string>
    <string name="logos">logos</string>
    <string name="time_entry">Time Entry</string>
    <string name="goal">Goal</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Want to Logout?</string>
    <string name="click_here">Click here</string>
    <string name="total_hours">Total hours</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="minimum_daily_goal">Minimum Daily Goal: %1$d hours</string>
    <string name="maximum_daily_goal">Maximum Daily Goal: %1$d hours</string>

    <!-- In res/values/strings.xml -->
    <string name="save_button_text">Save Goals</string>
    <string name="goal_name_hint">Enter name of the goal</string>
    <string name="min_goal_text">Minimum Daily Goal: %1$d hours</string>
    <string name="max_goal_text">Maximum Daily Goal: %1$d hours</string>
</resources>