<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="UseCompoundDrawables">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="410dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="60dp"
                android:background="#FFEB3B"
                app:layout_scrollFlags="enterAlways|scroll"
                app:logo="@drawable/epocharchitect_modified"
                app:title="Homepage"
                app:titleTextColor="@color/black">

            </androidx.appcompat.widget.Toolbar>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="330dp"
                android:layout_height="56dp"
                android:layout_marginStart="50dp"
                android:fontFamily="cursive"
                android:text="@string/welcome"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:text="@string/username"
                android:textSize="23sp"
                android:textStyle="bold|italic"
                />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="284dp"
                app:srcCompat="@drawable/welcome" />

            <Button
                android:id="@+id/goals"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/goal" />

            <Button
                android:id="@+id/time_entry"
                android:layout_width="188dp"
                android:layout_height="54dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"

                android:text="@string/time_entry" />

            <Button
                android:id="@+id/log_out"
                android:layout_width="180dp"
                android:layout_height="52dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/logout" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uname"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/want_to_logout"
                android:textColor="@color/baby_blue"
                android:textSize="15sp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>